--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,10 +1,10 @@
 PORT = 4000
-MONGO_URI=mongodb+srv://rktbruce01:ravi1007@cluster0.vuxzem7.mongodb.net/
+MONGO_URI=mongodb+srv://xxx000xx:****$$$$$7@cluster0.xxxxxxx.mongodb.net/
 FRONTEND_URL=http://localhost:3000
 DASHBOARD_URL=http://localhost:3001
-JWT_SECRET_KEY=qwertpoiuy
+JWT_SECRET_KEY=xxxxxx
 JWT_EXPIRES=7d
 COOKIE_EXPIRE = 7
-CLOUDINARY_CLOUD_NAME=dxa51j5e2
-CLOUDINARY_API_SECRET=_xvSX0F-Q5PFJXfe9LuzdsJFBs8
-CLOUDINARY_API_KEY=187622727226199
+CLOUDINARY_CLOUD_NAME=xxxxxxx
+CLOUDINARY_API_SECRET=xxxxxxxxxxxx
+CLOUDINARY_API_KEY=12345*********
