--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,10 +1,10 @@
-PORT = 4000
-MONGO_URI=mongodb+srv://xxx000xx:****$$$$$7@cluster0.xxxxxxx.mongodb.net/
-FRONTEND_URL=http://localhost:3000
-DASHBOARD_URL=http://localhost:3001
-JWT_SECRET_KEY=xxxxxx
+PORT = 
+MONGO_URI=
+FRONTEND_URL=
+DASHBOARD_URL=
+JWT_SECRET_KEY=
 JWT_EXPIRES=7d
 COOKIE_EXPIRE = 7
-CLOUDINARY_CLOUD_NAME=xxxxxxx
-CLOUDINARY_API_SECRET=xxxxxxxxxxxx
-CLOUDINARY_API_KEY=12345*********
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_API_KEY=
